@@ -27,6 +27,8 @@ export(eco.convert)
 export(eco.cormantel)
 export(eco.correlog)
 export(eco.detrend)
+export(eco.fill_ecogen_with_df)
+export(eco.fill_ecogen_with_ecopop)
 export(eco.format)
 export(eco.formula)
 export(eco.gsa)
@@ -138,7 +140,9 @@ exportMethods("ecoslot.G<-")
 exportMethods("ecoslot.P<-")
 exportMethods("ecoslot.S<-")
 exportMethods("ecoslot.XY<-")
+exportMethods("names<-")
 exportMethods(as.list)
+exportMethods(dim)
 exportMethods(eco.forestplot)
 exportMethods(eco.rankplot)
 exportMethods(eco.rasterplot)
@@ -151,6 +155,10 @@ exportMethods(ecoslot.OUT)
 exportMethods(ecoslot.P)
 exportMethods(ecoslot.S)
 exportMethods(ecoslot.XY)
+exportMethods(names)
+exportMethods(ncol)
+exportMethods(nrow)
+exportMethods(show)
 import(ggplot2)
 import(methods)
 import(reshape2)
